# workflow-orchestration-queue-juliet62

./: AGENTS.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: .labels.json  SETUP.md
.github/.devcontainer/: devcontainer.json
docs/: implementation-plan.md
plan_docs/: OS-APOW Architecture Guide v3.2.md  OS-APOW Development Plan v4.2.md  OS-APOW Implementation Specification v1.2.md  architecture.md  interactive-report.html  pr-approval-merge-plan.md  tech-stack.md
src/: __init__.py
src/models/: __init__.py  work_item.py
src/queue/: __init__.py  github_queue.py
test/: test-opencode-run.sh
tests/: __init__.py  conftest.py  test_github_queue.py  test_work_item.py
